mdapioutput/objects/Influence__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Influencer Accounts</relationshipLabel>
        <relationshipName>Influences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Influencers</relationshipLabel>
        <relationshipName>Influences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence_Level__c</fullName>
        <label>Influence Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InfluencedByAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influenced By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Influenced Accounts</relationshipLabel>
        <relationshipName>InfluencesBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpinionLeaderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opinion Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Influenced by Person</relationshipLabel>
        <relationshipName>Influencer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owns</fullName>
                    <color>#0B6FCE</color>
                    <label>Owns</label>
                </value>
                <value>
                    <fullName>Supply</fullName>
                    <color>#78C953</color>
                    <label>Supply</label>
                </value>
                <value>
                    <fullName>Research</fullName>
                    <color>#E27001</color>
                    <label>Research</label>
                </value>
                <value>
                    <fullName>KOL influence</fullName>
                    <color>#A845DC</color>
                    <label>KOL influence</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Influence</label>
    <nameField>
        <displayFormat>INF-{000000}</displayFormat>
        <label>Influence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influences</pluralLabel>
    <recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <label>Administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOL_Influence</fullName>
        <active>true</active>
        <label>KOL Influence</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>